Замена в блоке Education
Замена наименования университета

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <!-- Education container -->
                 <div class="Education_Section">
                     <h3 class="Maim_Content_Title">Education</h3>
-                    <h4 class="Education_Unit">National University of Radioelectronics</h4>
+                    <h4 class="Education_Unit">Belarusian State University of Informatics and Radioelectronics</h4>
                     <h4 class="Education_Position">Management</h4>
                     <p class="Education_Period">September 2009 - June 2014   <span class="Education_Period_Divider">|</span>   Country</p>
                 </div>
